[gd_scene load_steps=2 format=3 uid="uid://bl5g5kwwnke7d"]

[ext_resource type="Script" path="res://Scripts/Components/EntityDetectorComponent.gd" id="1_aasdy"]

[node name="EntityDetectorComponent" type="Area2D"]
collision_layer = 0
collision_mask = 6
script = ExtResource("1_aasdy")

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
